# CudaRayTracingBlackHole

./: CMakeLists.txt  LICENSE  Program.cpp  README.md  observeBlackHole.py
src/: CMakeLists.txt  Scene.cpp  Scene.h
src/hitables/: Horizon.cu  Horizon.cuh  IHitable.cuh  SchwarzschildBlackHoleEquation.cuh  Sky.cu  Sky.cuh  TexturedDisk.cu  TexturedDisk.cuh
src/processor/: SchwarzschildRayProcessor.cpp  SchwarzschildRayProcessor.cu  SchwarzschildRayProcessor.cuh  SchwarzschildRayProcessor.h
src/utiles/: ArgbColor.cu  ArgbColor.cuh  GPUParams.h  parallelStaff.cpp  parallelStaff.h  utils.cu  utils.cuh
